tests/NormalTests/paczka1/fuzzy1/59793651.err
Error in line 8: ZTU A319 177,5
Error in line 7: S318 S318 47,3
Error in line 13: AG6iG8 A401 70,6
Error in line 20: AG6iG8 S318 28,2
Error in line 14: S318 A319 14,2
Error in line 26: nuS A319 4,7
